tests/parse_print/autogen/317~1435132020_93/stderr.expected
Error:
    Parser error in file: tests/parse_print/autogen/317~1435132020_93/spec.essence Error is:
ValidatorError tests/parse_print/autogen/317~1435132020_93/spec.essence:8:18:
  |
8 |     participants(partition({4, 0, 3}, {0, 0, 2, 4}) -
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from int

tests/parse_print/autogen/317~1435132020_93/spec.essence:9:18:
  |
9 |                  partition({2, 1, 2}, {2, 1, 3, 0, 1}, {1, 5, 0, 5}, {3, 2}))
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from int
